--- a/style.css
+++ b/style.css
@@ -81,14 +81,11 @@ body {
     height: 15px;
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
-    /* flex-shrink: 1; */
-    /* margin-top: auto; */
-    /* position: absolute; */
-    /* bottom: 0; */
-    /* left: 50%;
-    transform: translateX(-50%); */
-
-    /* top: 0; */
+}
+.credit a {
+    color: white;
+    text-decoration: underline;
+    font-weight: normal;
 }
 
 .main-body {
@@ -133,21 +130,32 @@ form {
 
 input , label, span {
     display: block;
-    width: 200px;
+    width: 240px;
     height: 30px;
     border-width: 1px;
     border-radius: 5px;
-    border-color: rgba(185, 185, 185, 0.272);
+    border-color: #E5E7EB;
 }
 
-label{
+/* input[type="tel"] {
+    border-style: none;
+} */
+
+label {
     font-size: 12px;
     height: auto;
+    letter-spacing: 1px;
 }
 
 input {
     padding: 1px 8px;
     font-size: 14px;
+    background-color: rgba(229, 231, 235, 0.268);
+}
+
+input:focus {
+    box-shadow: 2px 2px 10px rgb(204, 204, 204);
+    background-color: rgba(84, 99, 66, 0.199);
 }
 
 .main-form {
@@ -169,6 +177,11 @@ input {
     padding: 0px 40px;
     display: block;
     height: auto;
+}
+
+.field span {
+    color: red;
+    font-size: 10px;
 }
 
 .main-footer {
@@ -200,3 +213,4 @@ a {
     font-weight: bold;
     text-decoration: none;
 }
+
